--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 # CURRENT ENVIRONMENT
 # ===================
-SINATRA_ENV=
+SINATRA_ENV=''
+
+# DATABASE
+# ==================
+DATABASE_POOL=''
+DATABASE_NAME=''
+DATABASE_HOST=''
+DATABASE_USER=''
+DATABASE_PASS=''
